--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^26.0.20",
     "@types/mongodb": "^3.6.8",
     "@types/node": "^14.14.28",
+    "@types/socket.io": "^2.1.13",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
@@ -54,6 +55,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.4",
     "mysql2": "^2.2.5",
+    "socket.io": "^3.1.2",
     "uuid": "^8.3.2",
     "validator": "^13.5.2"
   }
